# ai-research-assistant

./: .gitignore.txt  pyproject.toml
my_research_assistant/: main.py
